--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -44,6 +44,7 @@
     margin-left: 7px;
 }
 .header__menu{
+    border-bottom: 1px solid #fff;
     background-color: $bg;
 }
 .menu{
@@ -489,12 +490,26 @@
  
 // start products
 .products{
-    .product__item{
-        flex-basis: calc(25% - 30px);
-        margin-left: 30px;
-    }
     padding: 110px 0;
     background-color: $grey;
+}
+.product__item{
+    flex-basis: calc(25% - 30px);
+    margin-left: 30px;
+    animation-name: fadeUp;
+    animation-duration: 1.1s;
+    &:nth-child(4n){
+        animation-duration: 1.1s;
+    }
+    &:nth-child(4n-1){
+        animation-duration: 0.9s;
+    }
+    &:nth-child(4n-2){
+        animation-duration: 0.7s;
+    }
+    &:nth-child(4n-3){
+        animation-duration: 0.5s;
+    }
 }
 .products__wrapper,
 .product-slider__wrapper{
@@ -660,8 +675,9 @@
 .advantages__item{
     max-width: 370px;
     text-align: center;
-    padding: 0 15px;
+    padding: 15px;
     &:hover{
+        background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(35,44,48,1) 57%);
         .advantages__item-images{
             background-color: $green;
             g{
@@ -670,6 +686,9 @@
         } 
         .advantages__item-title{
             color: $green;
+        }
+        .advantages__item-images{
+            transform: scale(1.1);
         }
     }
     &-images{
@@ -713,6 +732,7 @@
 
 //start authors
 .author{
+    background-image: url('../images/author-bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -728,6 +748,7 @@
         align-items: center;
         justify-content: center;
         background-color: $green;
+        padding: 10px;
     }
     &__title{
         font-size: 30px;
@@ -761,6 +782,8 @@
     }
 }
 .tutorial__item{
+    animation-name: fadeInLeft;
+    animation-duration: 1s;
     &-images{
         min-height: 270px;
         background-repeat: no-repeat;
