--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,23 @@
 @import 'fonts';
 @import 'animation';
 
+a.link__effect{
+    transition: all .5s;
+    position: relative;
+    &::after{
+        content: '';
+        position: absolute;
+        height: 1px;
+        width: 0;
+        background-color: $green;
+        bottom: 0;
+        left: 0;
+        transition: all .5s;
+    }
+    &:hover::after{
+        width: calc(100% + 10px);
+    }
+}
 // start header
 .header{
     position: fixed;
@@ -62,21 +79,6 @@
     a{
         color: #fff;
         font-size: 14px;
-        transition: all .5s;
-        position: relative;
-        &::after{
-            content: '';
-            position: absolute;
-            height: 1px;
-            width: 0;
-            background-color: #fff;
-            bottom: 0;
-            left: 0;
-            transition: all .5s;
-        }
-        &:hover::after{
-            width: calc(100% + 10px);
-        }
     }
 }
 .header__circle{
