--- a/app/scss/_animation.scss
+++ b/app/scss/_animation.scss
@@ -8,10 +8,32 @@
       transform: scale(1);
     }
 }
+@keyframes scale {
+    from {
+      transform: scale(1);
+    }
+    50%{
+      transform: scale(1.1);
+      background-color: rgba(255,255,255, .5);
+    }
+    to {
+      transform: scale(1);
+    }
+}
 @keyframes fadeUp {
     from {
       opacity: 0;
       transform: translate3d(0,50%,0);
+    }
+    to {
+      opacity: 1;
+      transform: translate3d(0,0,0);
+    }
+}
+@keyframes fadeUpBig {
+    from {
+      opacity: 0;
+      transform: translate3d(0,100%,0);
     }
     to {
       opacity: 1;
@@ -27,4 +49,25 @@
       opacity: 1;
       transform: translate3d(0,0,0);
     }
+}
+@keyframes shakeX {
+  from,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translate3d(10px, 0, 0);
+  }
 }
