--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -53,6 +53,7 @@ body{
     color: $text;
 }
 .title{
+    opacity: 0;
     text-align: center;
     color: $bg;
     @include f700;
@@ -61,6 +62,7 @@ body{
     margin-bottom: 30px;
     animation-name: fadeIn;
     animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 .rate-star{
     display: inline-block;
