--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,6 +20,37 @@ a.link__effect{
         width: calc(100% + 10px);
     }
 }
+.btn-effect{
+    position: relative;
+    cursor: pointer;
+    transition: all .3s;
+    &::after{
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 1px;
+        background-color: #fff;
+        left: 50%;
+        bottom: 5px;
+    }
+    &:hover{
+        letter-spacing: 1.1px;
+    }
+    &:hover::after{
+        transition: all .3s;
+        width: 100%;
+        left: 0;
+    }
+}
+.submit-btn-effect{
+    cursor: pointer;
+    transition: all .3s;
+    &:hover{
+        transition: all .3s;
+        background-color: #f1f4f5;
+        color: $green;
+    }
+}
 // start header
 .header{
     position: fixed;
@@ -428,6 +459,10 @@ a.link__effect{
 // end modal
 
 // start search
+.search__inner-form{
+    animation-name: fadeUpBig;
+    animation-duration: 0.5s;
+}
 .search{
     background-repeat: no-repeat;
     background-size: cover;
@@ -498,20 +533,6 @@ a.link__effect{
 .product__item{
     flex-basis: calc(25% - 30px);
     margin-left: 30px;
-    animation-name: fadeUp;
-    animation-duration: 1.1s;
-    &:nth-child(4n){
-        animation-duration: 1.1s;
-    }
-    &:nth-child(4n-1){
-        animation-duration: 0.9s;
-    }
-    &:nth-child(4n-2){
-        animation-duration: 0.7s;
-    }
-    &:nth-child(4n-3){
-        animation-duration: 0.5s;
-    }
 }
 .products__wrapper,
 .product-slider__wrapper{
@@ -553,6 +574,8 @@ a.link__effect{
        background-size: cover; 
        display: block;
        background-position: center;
+       animation-name: fadeUp;
+       animation-duration: 1s;
     }
     &-content{
         display: flex;
@@ -1124,6 +1147,7 @@ a.link__effect{
         min-height: 120px;
     }   
     .product__item{
+        margin-left: 0;
         padding-bottom: 30px;
         margin-bottom: 30px;
         box-shadow: none;
@@ -1475,6 +1499,9 @@ a.link__effect{
         & + .tab{
         border-left: 1px solid #d7d7d7;
         }
+        &.active{
+            color: $green;
+        }
     }
 }
 .tab_content{
@@ -1565,7 +1592,6 @@ a.link__effect{
         display: block;
         padding: 17px 5px 15px;
         width: 100%;
-        cursor: pointer;
         &::before{
             font-size: 16px;
             font-family: 'icomoon';
@@ -1711,6 +1737,9 @@ a.link__effect{
     line-height: 300px;
     padding-bottom: 20px;
     position: relative;
+    animation-name: shakeX;
+    animation-duration: 1s;
+    animation-delay: 1s;
     &::after{
         position: absolute;
         content: '';
@@ -1739,6 +1768,15 @@ a.link__effect{
     border: 1px solid #fff;
     border-radius: 4px;
     margin-bottom: 100px;
+    transition: all .3s;
+    animation-name: scale;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    &:hover{
+        transition: all .3s;
+        background-color: rgba(255,255,255, .5);
+        transform: scale(1.05);
+    }
 }
 // end page-404
 
@@ -1869,6 +1907,7 @@ a.link__effect{
         width: 190px;
     }
 }
+
 // end contact
 
 // start setiings
@@ -1895,7 +1934,7 @@ a.link__effect{
             font-size: 14px;
             @include f500;
             &.active{
-                color: #37474f;
+                color: $green !important;
                 border-bottom: 2px solid $green; 
                 &::before{
                     color: $green;
@@ -2028,7 +2067,7 @@ a.link__effect{
             font-family: 'icomoon';
             left: 27px;
             top: 16px;
-            color: #d0d0d0;
+            color: #fff;
             font-size: 14px;
         }
       }  
